syntax = "proto3";

package worker;

option go_package = "internal/master/pb;pb";
//protoc --go_out=. --go-grpc_out=. proto/master.proto
service TicketMaster {
rpc RegisterWorker(WorkerInfo) returns (RegisterReply);
rpc CancelTask(CancelTaskInfo) returns (CancelReply);
}
message WorkerInfo {
  string worker_id = 1;
  string address = 2;
  int32 workStatus = 3; // "Idle", "Working", "Risking"
  string TaskAssigned = 4; //Task id
  string taskStatus=5;

}
message RegisterReply {
  bool success = 1;
  string message = 2;
}


message CancelTaskInfo {
  string cancelTaskId = 1; //
  string workerId=2;
  int32 workStatus=3;
}

message CancelReply {
  bool success = 1;
  string message = 2;
}